[COZY-162] 사용자 탈퇴 API 추가 및 코드 구조 리팩토링, AccessToken 발급 Body로 옮기기 (#39)
* [COZY-162] 충돌 해결

* [COZY-162] feat : 사용자 탈퇴 API 로직 추가

* [COZY-162] refactor : 개행등 단순 refactoring

* [COZY-162] refactor : log 찍으려고 사용한 변수 삭제

* [COZY-162] refactor : 코드 구조 수정

* [COZY-162] refactor : 로컬에서 테스트용 uri 추가

* [COZY-162] refactor : 개행 등 의미없는 refactoring

* [COZY-162] refactor : record 적용

* [COZY-162] add : 임시토큰과 정식토큰 response 생성 방식 분리

* [COZY-163] add : 토큰 응답 DTO 에 access token 추가

* [COZY-163] add : 토큰 응답 DTO 에 access token을 추가하기위해 access 토큰, refresh 토큰 생성 메소드 분리 후 DTO 생성

* [COZY-163] refactor : access 토큰을 헤더 말고 바디에 추가

* [COZY-163] refactor : authService 수정 내역 반영

* [COZY-163] refactor : ResponseEntity 반환 방식 수정

* [COZY-163] refactor : record 방식 사용 안함

* [COZY-163] refactor : @NoArgsConstructor 사용 안함

* [COZY-163] add : refresh token 검증 로직 추가
- 잘못된 토큰으로 접근 시 401 에러 코드 반환하게 추가