@@ -1,14 +1,14 @@
 package com.cozymate.cozymate_server.domain.auth.utils;
 
+import com.cozymate.cozymate_server.domain.auth.enums.TokenType;
 import com.cozymate.cozymate_server.global.response.code.status.ErrorStatus;
-import com.cozymate.cozymate_server.global.response.exception.GeneralException;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
-import java.util.Arrays;
 import java.util.List;
+import java.io.IOException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -20,28 +20,29 @@ import org.springframework.security.web.authentication.WebAuthenticationDetailsS
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import java.io.IOException;
 
 @Component
 @RequiredArgsConstructor
 @Slf4j
 public class JwtFilter extends OncePerRequestFilter {
-
     // JWT 검증을 제외할 URL 목록
-    private static final List<String> EXCLUDE_URLS = Arrays.asList(
+    private static final List<String> EXCLUDE_URLS = List.of(
             "/oauth2/kakao/sign-in",
             "/oauth2/naver/sign-in",
-            "/oauth2/apple/sign-in",
-            "/api/v3/member/reissue"
+            "/oauth2/apple/sign-in"
     );
 
     // 임시 토큰으로만 접근 가능한 URL 목록
-    private static final List<String> TEMPORARY_URLS = Arrays.asList(
+    private static final List<String> TEMPORARY_URLS = List.of(
             "/api/v3/member/sign-up",
             "/api/v3/member/check-nickname"
     );
 
+    private static final List<String> REFRESH_URLS = List.of("/api/v3/member/reissue");
+    private static final Integer TOKEN_BEGIN_INDEX = 7;
     private static final String REQUEST_ATTRIBUTE_NAME_CLIENT_ID = "client_id";
+
+    private static final String REQUEST_ATTRIBUTE_NAME_REFRESH = "refresh";
 
     private final JwtUtil jwtUtil; // JWT 토큰 발급 검증 클래스
     private final UserDetailsService userDetailsService; // 사용자 상세 정보를 로드하는 서비스
@@ -67,7 +68,7 @@ public class JwtFilter extends OncePerRequestFilter {
             }
 
             // Authorization 헤더에서 JWT를 추출
-            String jwt = authHeader.substring(7);
+            String jwt = authHeader.substring(TOKEN_BEGIN_INDEX);
             // JWT를 검증
             jwtUtil.validateToken(jwt);
 
@@ -75,15 +76,27 @@ public class JwtFilter extends OncePerRequestFilter {
             String userName = jwtUtil.extractUserName(jwt);
             UserDetails userDetails = userDetailsService.loadUserByUsername(userName);
 
+            log.info("토큰 타입 : {}", jwtUtil.extractTokenType(jwt));
+
             // 임시 토큰일 경우, 접근을 제한할 URL 목록에 대한 접근 여부 확인
-            if (jwtUtil.isTemporaryToken(jwt)) {
+            if (jwtUtil.equalsTokenTypeWith(jwt, TokenType.TEMPORARY)) {
                 if (isNotAllowTemporary(request)) {
-                    throw new GeneralException(ErrorStatus._TEMPORARY_TOKEN_ACCESS_DENIED_); // 접근 거부 예외 발생
+                    // 임시토큰 접근 거부 예외
+                    throw new RuntimeException(ErrorStatus._TEMPORARY_TOKEN_ACCESS_DENIED_.getMessage());
                 }
+                request.setAttribute(REQUEST_ATTRIBUTE_NAME_CLIENT_ID, userDetails.getUsername());
+            }
+
+            // 리프레시 토큰일 경우, 접근을 제한할 URL 목록에 대한 접근 여부 확인
+            if (jwtUtil.equalsTokenTypeWith(jwt, TokenType.REFRESH)) {
+                if (isNotAllowRefresh(request)) {
+                    // refresh 토큰 접근 거부 예외
+                    throw new RuntimeException(ErrorStatus._REFRESH_TOKEN_ACCESS_DENIED_.getMessage());
+                }
+                request.setAttribute(REQUEST_ATTRIBUTE_NAME_REFRESH, jwt);
             }
 
             // 사용자 정보와 권한을 설정하고 SecurityContext에 인증 정보를 저장
-            request.setAttribute(REQUEST_ATTRIBUTE_NAME_CLIENT_ID, userDetails.getUsername());
             UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
                     userDetails,
                     null,
@@ -100,8 +113,12 @@ public class JwtFilter extends OncePerRequestFilter {
         } catch (Exception e) {
             log.error("필터에서 예외 발생 = {}", e.toString());
             log.error(request.getRequestURI());
-            request.setAttribute("exception", e);
-            throw new GeneralException(ErrorStatus._TOKEN_INVALID); // JWT가 유효하지 않을 경우 예외 발생
+            SecurityContextHolder.clearContext();
+
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.getWriter().print("잘못된 토큰");
+
+            log.error(Integer.toString(response.getStatus()));
         }
     }
 
@@ -115,4 +132,7 @@ public class JwtFilter extends OncePerRequestFilter {
         return TEMPORARY_URLS.stream().noneMatch(url -> request.getRequestURI().equals(url));
     }
 
+    private boolean isNotAllowRefresh(HttpServletRequest request) {
+        return REFRESH_URLS.stream().noneMatch(url -> request.getRequestURI().equals(url));
+    }
 }
